# ocaml99

./: README.md  dune-project  ocaml99.opam  ocaml99.opam.locked
lib/: arithmetic.ml  binary_trees.ml  dune  lists.ml  logic_and_codes.ml  multiway_trees.ml  ocaml99.ml
test/: arithmetic_test.ml  binary_trees_test.ml  dune  list_test.ml  logic_and_codes_test.ml  multiway_trees_test.ml  ocaml99_test.ml
